# LightMCP

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  lua.cmake  lua_safe.cpp  main.cpp  mcp_io.cpp  mcp_io.h  mcp_io.hh  plugin_api.hh  plugin_linux.cpp  plugin_stub.cpp  plugin_win.cpp  vscode_launch.cmake
plugins/buzzyfuzzy/: CMakeLists.txt  core.cpp  core.hh  plugin.cpp
plugins/example/: CMakeLists.txt  plugin.cpp
plugins/lua/: CMakeLists.txt  lua_safe.cpp  lua_safe.hh  plugin.cpp
plugins/simplemem/: CMakeLists.txt  core.cpp  core.hh  plugin.cpp
